# backend/src/app.ts
@@ -1,6 +1,8 @@
 import express from "express";
 import cors from "cors";
 import swaggerUi from "swagger-ui-express";
+import authRoutes from "./routes/auth.routes";
+import transactionsRoutes from "./routes/transaction.routes";
 const swaggerDocument = require("./swagger/swagger.json");
 
 const app = express();
@@ -8,12 +10,17 @@ const app = express();
 app.use(express.json());
 app.use(cors());
 
-// 👉 Redirigir la ruta raíz hacia Swagger
+
+app.use("/api/auth", authRoutes);
+app.use("/api/transactions", transactionsRoutes);
+
+
 app.get("/", (req, res) => {
   res.redirect("/api-docs");
 });
 
-// Documentación Swagger
+
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 export default app;
+
